--- a/calculadora-de-m-dia/src/index.html
+++ b/calculadora-de-m-dia/src/index.html
@@ -1,7 +1,9 @@
 <html>
   <head>
     <title> Imersão Dev Alura - Aula 01</title>
-  </head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script type="text/javascript" src="script.js"> </script>
+    </head>
   <body>
     <div class="container">
       <h1 class="page-title">
